# generaloader

./: README.md
etc/: loader.conf
sql/: eboxchglog.sql  interface.sql  merge_inc_to_all.proc
src/: Makefile.am
src/loader/: Makefile.am  hash.cpp  hash.h  main.cpp  public.cpp  public.h
src/loader/test/: demo.ctl  demo.ctl2  demo.sql  demo.txt  demo.txt2  demo.txt3  load.sh  make_2file_2kw.cpp  make_chlog_2kw.cpp  oracle_rb_wl_eboxchglog_ST.20121103.txt  test.cpp
src/sqlldr/: sqlldr.cpp  sqlldr.h
